# pypitoken

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yml  CHANGELOG.rst  CODE_OF_CONDUCT.md  CONTRIBUTING.rst  LICENSE  README.rst  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml  release-drafter.yml  renovate.json5  sync-pre-commit.py
.github/workflows/: ci.yml  deploy.yml  publish.yml  release-drafter.yml
docs/: conf.py  discussions.rst  howto.rst  index.rst  reference.rst  requirements.txt  tutorial.rst
pypitoken/: __init__.py  exceptions.py  pypirc.py  restrictions.py  token.py  utils.py
scripts/: bootstrap  docs  docs-spelling  publish  tests
tests/: conftest.py  test_meta.py  test_restrictions.py  test_token.py  test_utils.py
