[tool.poetry]
name = "pypitoken"
version = "0.0.0"
description = "Manipulate PyPI API tokens"
license = "MIT"
authors = ["Joachim Jablon <ewjoachim@gmail.com>"]
classifiers = [
    "Topic :: Security",
    "Topic :: System :: Archiving :: Packaging"
]
readme = "README.rst"
homepage = "https://pypitoken.readthedocs.io/en/latest/"
repository = "https://github.com/ewjoachim/pypitoken"
documentation = "https://pypitoken.readthedocs.io/en/latest/"
keywords = ["pypi", "api", "token", "security", "packaging"]

[tool.poetry.dependencies]
python = "^3.7"
pymacaroons = "^0.13.0"
jsonschema = "*"
typing-extensions = "*"

[tool.poetry.group.releasec.dependencies]
dunamai = "*"

[tool.poetry.group.docs.dependencies]
Sphinx = ">=5"
sphinx-material = "*"
sphinx-github-changelog = "*"

[tool.poetry.group.tests.dependencies]
pytest = "*"
pytest-cov = "*"
pytest-mock = "*"

[tool.poetry.group.lint.dependencies]
black = "*"
isort = "*"
flake8 = "*"
mypy = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
